@@ -1054,6 +1054,9 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// Do the tests now:
+name|reorderedDBQIndividualReplicaTest
+argument_list|()
+expr_stmt|;
 name|testDBQUsingUpdatedFieldFromDroppedUpdate
 argument_list|()
 expr_stmt|;
@@ -1758,6 +1761,341 @@ operator|.
 name|info
 argument_list|(
 literal|"outOfOrderDeleteUpdatesIndividualReplicaTest: This test passed fine..."
+argument_list|)
+expr_stmt|;
+name|clearIndex
+argument_list|()
+expr_stmt|;
+name|commit
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|reorderedDBQIndividualReplicaTest
+specifier|private
+name|void
+name|reorderedDBQIndividualReplicaTest
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|clearIndex
+argument_list|()
+expr_stmt|;
+name|commit
+argument_list|()
+expr_stmt|;
+comment|// put replica out of sync
+name|float
+name|newinplace_updatable_float
+init|=
+literal|100
+decl_stmt|;
+name|long
+name|version0
+init|=
+literal|2000
+decl_stmt|;
+name|List
+argument_list|<
+name|UpdateRequest
+argument_list|>
+name|updates
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|updates
+operator|.
+name|add
+argument_list|(
+name|simulatedUpdateRequest
+argument_list|(
+literal|null
+argument_list|,
+literal|"id"
+argument_list|,
+literal|0
+argument_list|,
+literal|"title_s"
+argument_list|,
+literal|"title0_new"
+argument_list|,
+literal|"inplace_updatable_float"
+argument_list|,
+name|newinplace_updatable_float
+argument_list|,
+literal|"_version_"
+argument_list|,
+name|version0
+operator|+
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// full update
+name|updates
+operator|.
+name|add
+argument_list|(
+name|simulatedUpdateRequest
+argument_list|(
+name|version0
+operator|+
+literal|1
+argument_list|,
+literal|"id"
+argument_list|,
+literal|0
+argument_list|,
+literal|"inplace_updatable_float"
+argument_list|,
+name|newinplace_updatable_float
+operator|+
+literal|1
+argument_list|,
+literal|"_version_"
+argument_list|,
+name|version0
+operator|+
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// inplace_updatable_float=101
+name|updates
+operator|.
+name|add
+argument_list|(
+name|simulatedDeleteRequest
+argument_list|(
+literal|"inplace_updatable_float:"
+operator|+
+operator|(
+name|newinplace_updatable_float
+operator|+
+literal|1
+operator|)
+argument_list|,
+name|version0
+operator|+
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Reordering needs to happen using parallel threads
+name|ExecutorService
+name|threadpool
+init|=
+name|ExecutorUtil
+operator|.
+name|newMDCAwareFixedThreadPool
+argument_list|(
+name|updates
+operator|.
+name|size
+argument_list|()
+operator|+
+literal|1
+argument_list|,
+operator|new
+name|DefaultSolrThreadFactory
+argument_list|(
+name|getTestName
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// re-order the updates by swapping the last two
+name|List
+argument_list|<
+name|UpdateRequest
+argument_list|>
+name|reorderedUpdates
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|updates
+argument_list|)
+decl_stmt|;
+name|reorderedUpdates
+operator|.
+name|set
+argument_list|(
+literal|1
+argument_list|,
+name|updates
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|reorderedUpdates
+operator|.
+name|set
+argument_list|(
+literal|2
+argument_list|,
+name|updates
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|Future
+argument_list|<
+name|UpdateResponse
+argument_list|>
+argument_list|>
+name|updateResponses
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|UpdateRequest
+name|update
+range|:
+name|reorderedUpdates
+control|)
+block|{
+name|AsyncUpdateWithRandomCommit
+name|task
+init|=
+operator|new
+name|AsyncUpdateWithRandomCommit
+argument_list|(
+name|update
+argument_list|,
+name|NONLEADERS
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|,
+name|random
+argument_list|()
+operator|.
+name|nextLong
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|updateResponses
+operator|.
+name|add
+argument_list|(
+name|threadpool
+operator|.
+name|submit
+argument_list|(
+name|task
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// while we can't guarantee/trust what order the updates are executed in, since multiple threads
+comment|// are involved, but we're trying to bias the thread scheduling to run them in the order submitted
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+block|}
+name|threadpool
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Thread pool didn't terminate within 10 secs"
+argument_list|,
+name|threadpool
+operator|.
+name|awaitTermination
+argument_list|(
+literal|10
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// assert all requests were successful
+for|for
+control|(
+name|Future
+argument_list|<
+name|UpdateResponse
+argument_list|>
+name|resp
+range|:
+name|updateResponses
+control|)
+block|{
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|resp
+operator|.
+name|get
+argument_list|()
+operator|.
+name|getStatus
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|SolrDocument
+name|doc
+init|=
+name|NONLEADERS
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getById
+argument_list|(
+name|String
+operator|.
+name|valueOf
+argument_list|(
+literal|0
+argument_list|)
+argument_list|,
+name|params
+argument_list|(
+literal|"distrib"
+argument_list|,
+literal|"false"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+literal|"This doc was supposed to have been deleted, but was: "
+operator|+
+name|doc
+argument_list|,
+name|doc
 argument_list|)
 expr_stmt|;
 name|clearIndex
